CHANGES.txt - 08/04/2005
------------------------

CHANGES IN CUPS V1.2.0b1

	- Disallow the "#" character in printer names, since it
	  has special meaning in the shell, config files, and in
	  URIs (STR #917)
	- Added a new application/x-csource MIME type, and
	  support for it to the texttops filter so that you can
	  pretty print plain text files without the C/C++
	  keywords being highlighted.
	- The pdftops filter did not compile with GCC 4.0 (STR
	  #1226)
	- The texttops filter did not highlight preprocessor
	  directives followed by a tab properly.
	- HP PJL output now uses both JOB DISPLAY and RDYMSG
	  commands to show the current job on the printer's
	  display (STR #1218)
	- Local authentication certificates are now stored in
	  /var/run/cups/certs by default instead of
	  /etc/cups/certs (STR #1211)
	- Backends now use "&" to separate options in device
	  URIs; "+" is still recognized but is deprecated (STR
	  #842)
	- The USB backend no longer supports the usb:/dev/foo
	  format on systems that support device ID queries.
	- Forced classification markings did not work when the
	  job-sheets parameters were "none,none".
	- "lpstat -l -p" incorrectly showed all users as allowed,
	  even if the queue was restricted to certain users (STR
	  #801)
	- The scheduler now automatically detects SSL/TLS clients
	  without using the SSLPort/SSLListen directives.
	- The CUPS API and scheduler no longer support SSLv2-
	  encrypted connections.
	- Updated the cupsaddsmb utility to correctly export the
	  CUPS driver for Windows.
	- Fixed a signal-handling bug in httpRead() which
	  ultimately caused the server to print multiple copies
	  when it was busy (STR #1184)
	- The cupsFile API now uses the O_APPEND option when
	  opening files in append mode (STR #990)
	- The md5.h header and md5_* functions are now officially
	  private and have been renamed to avoid conflicts with
	  other implementations with the same name.